--- a/base/templates/base/task_list.html
+++ b/base/templates/base/task_list.html
@@ -1,14 +1,15 @@
 <h1>To do list</h1>
-
+<a href="{% url 'task-create' %}">Add Task</a>
 <table>
     <tr>
         <th>Item</th>
-        <th></th>
     </tr>
     {% for task in tasks %}
     <tr>
         <td>{{task.title}}</td>
         <td><a href="{% url 'task' task.id %}">View</a></td>
+        <td><a href="{% url 'task-update' task.id %}">Edit</a></td>
+        <td><a href="{% url 'task-delete' task.id %}">Delete</a></td>
     </tr>
     {% empty %}
     <h3>No items in list</h3>
