--- a/base/templates/base/login.html
+++ b/base/templates/base/login.html
@@ -4,3 +4,4 @@
     {{form.as_p}}
     <input type="submit" value="Login">
 </form>
+<p>Don't have an account ? <a href="{% url 'register' %}">Register</a></p>
