--- a/base/templates/base/task_confirm_delete.html
+++ b/base/templates/base/task_confirm_delete.html
@@ -1,6 +1,16 @@
-<a href="{% url 'tasks' %}">Go Back</a>
-<form method="POST" action="">
-    {% csrf_token %}
-    <p>Are you sure you wanna delete this task ? {{task}}</p>
-    <input type="submit" value="Delete"/>
-</form>
+{% extends 'base/main.html' %}
+{% block content %}
+
+<div class="header-bar">
+    <a href="{% url 'tasks' %}">&#8592; Back</a>
+</div>
+
+<div class="card-body">
+    <form method="POST">
+        {% csrf_token %}
+        <p>Are you sure you want to delete task "<i>{{task}}</i>" ?</p>
+        <input class="button" type="submit" value="Delete"/>
+    </form>
+</div>
+
+{% endblock content %}
