--- a/base/templates/base/task_list.html
+++ b/base/templates/base/task_list.html
@@ -1,30 +1,47 @@
-{% if request.user.is_authenticated %}
-    <p>{{request.user}}</p>
-    <a href="{% url 'logout' %}">Logout</a>
-{% else %}
-    <a href="{% url 'login' %}">Login</a>
-{% endif %}
-<hr>
-<h1>To do list</h1>
-<a href="{% url 'task-create' %}">Add Task</a>
+{% extends 'base/main.html' %}
+{% block content %}
 
-<form method="GET">
-    <input type="text" name="search-area" value="{{search_input}}"/>
-    <input type="submit" value="Search" />
-</form>
+<div class="header-bar">
+    <div>
+        <h1>Hello {{request.user|title}}</h1>
+        <h3 style="margin: 0;">You have <i>{{count}}</i> incomplete task{{ count|pluralize:"s" }}</h3>
+    </div>
+    {% if request.user.is_authenticated %}
+        <a href="{% url 'logout' %}">Logout</a>
+    {% else %}
+        <a href="{% url 'login' %}">Login</a>
+    {% endif %}
+</div>
 
-<table>
-    <tr>
-        <th>Item</th>
-    </tr>
+<div id="search-add-wrapper">
+    <form method="GET" style="margin-top: 1rem; display: flex;">
+        <input type="text" name="search-area" value="{{search_input}}"/>
+        <input class="button" type="submit" value="Search" />
+    </form>
+    <a id="add-link" href="{% url 'task-create' %}">&#x2b;</a>
+</div>
+
+
+<div class="task-items-wrapper">
     {% for task in tasks %}
-    <tr>
-        <td>{{task.title}}</td>
-        <td><a href="{% url 'task' task.id %}">View</a></td>
-        <td><a href="{% url 'task-update' task.id %}">Edit</a></td>
-        <td><a href="{% url 'task-delete' task.id %}">Delete</a></td>
-    </tr>
+    <div class="task-wrapper">
+        {% if task.complete %}
+        <div class="task-title">
+            <div class="task-complete-icon"></div>
+            <i><s><a href="{% url 'task-update' task.id %}">{{task|title}}</a></s></i>
+        </div>
+        <a class="delete-link" href="{% url 'task-delete' task.id %}">&#215;</a>
+        {% else %}
+        <div class="task-title">
+            <div class="task-incomplete-icon"></div>
+            <a href="{% url 'task-update' task.id %}">{{task|title}}</a>
+        </div>
+        <a class="delete-link" href="{% url 'task-delete' task.id %}">&#215;</a>
+        {% endif %}
+    </div>
     {% empty %}
-    <h3>No items in list</h3>
+    <p class="card-body">No task right now</p>
     {% endfor %}
-</table>
+</div>
+
+{% endblock content %}
